# musefs

./: .gitignore  .yamllint  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  deny.toml
.cargo/: audit.toml  mutants.toml
.githooks/: pre-commit
.github/: dependabot.yml
.serena/: project.yml
benches/: passthrough_dd.sh  storage_tunables_bench.sh
contrib/: CHANGELOG.md
contrib/beets/: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
contrib/beets/beetsplug/: __init__.py  _core.py  musefs.py
contrib/beets/tests/: conftest.py  schema.sql  schema_v1.sql  test_art.py  test_build_records.py  test_contract.py  test_db.py  test_e2e.py  test_managed_state.py  test_map_fields.py  test_path_gate.py  test_paths.py  test_plugin.py  test_reconcile.py  test_smoke.py  test_sync.py
contrib/lidarr/: LICENSE  README.md  pyproject.toml  ruff.toml
contrib/lidarr/src/musefs_lidarr/: __init__.py  api.py  cli_import.py  cli_sync.py  env.py  errors.py  events.py  import_link.py  mapping.py  sync.py
contrib/lidarr/tests/: conftest.py  test_api.py  test_cli.py  test_env.py  test_events.py  test_import_link.py  test_mapping.py  test_path_gate.py  test_smoke.py  test_sync.py
contrib/picard/: README.md  pyproject.toml  requirements.txt  ruff.toml
contrib/picard/musefs/: __init__.py  _core.py
contrib/picard/musefs/_common/: __init__.py  constants.py  contract.py  errors.py  paths.py  scan.py  schema.py  store.py  sync.py
contrib/picard/tests/: conftest.py  schema.sql  schema_v1.sql  test_api_versions.py  test_batch_scan.py  test_callback_flow.py  test_conftest_sanity.py  test_contract.py  test_core_db.py  test_front_cover.py  test_images.py  test_map_fields.py  test_options_page.py  test_parse_field_map.py  test_path_gate.py  test_plugin_loads.py  test_registration.py  test_resolve_config.py  test_resolved_files.py  test_run_scan.py  test_sync.py  test_sync_roundtrip.py  test_vendor_sync.py
contrib/python-musefs/: README.md  pyproject.toml  ruff.toml  vendor_to_picard.py
contrib/python-musefs/src/musefs_common/: __init__.py  constants.py  contract.py  errors.py  paths.py  scan.py  schema.py  store.py  sync.py
contrib/python-musefs/tests/: conftest.py  schema.sql  test_atomicity.py  test_constants.py  test_contract.py  test_errors.py  test_merge_tags.py  test_paths.py  test_public_api.py  test_scan.py  test_store_art.py  test_store_db.py  test_sync.py
docker/: Dockerfile.glibc  Dockerfile.musl
docs/: COVERAGE.md  DB_CONTRACT.md  FLAC.md  M4A.md  MP3.md  OGG.md  ROADMAP.md  (+3 more)
fuzz/: Cargo.toml
fuzz/corpus/flac/: seed0
fuzz/corpus/mp4/: seed0  seed_two_covers
fuzz/corpus/ogg/: seed_issue365
fuzz/corpus/serve/: seed_m4a  seed_mp3  seed_opus  seed_wav
fuzz/corpus/vorbiscomment/: seed0
fuzz/corpus/wav/: seed0
fuzz/fuzz_targets/: b64.rs  flac.rs  mp3.rs  mp4.rs  ogg.rs  ogg_page.rs  serve.rs  vorbiscomment.rs  wav.rs
fuzz/regressions/mp4/: co64-offset-add-overflow
fuzz/src/: lib.rs
musefs/: Cargo.toml
musefs-cli/: Cargo.toml
musefs-cli/src/: lib.rs  main.rs  progress.rs  signal.rs
musefs-cli/tests/: cli.rs  scan.rs
musefs-core/: Cargo.toml
musefs-core/benches/: fingerprint_overhead.rs  read_throughput.rs
musefs-core/src/: byte_budget.rs  db_pool.rs  error.rs  facade.rs  freshness.rs  lib.rs  lock.rs  mapping.rs  metrics.rs  ogg_index.rs  readahead.rs  reader.rs  refresh_diff.rs  scan.rs  telemetry.rs  template.rs  tree.rs
musefs-core/src/facade/: refresh.rs  tests.rs
musefs-core/src/scan/: bounded_probe_tests.rs  hardening_tests.rs  ogg_probe_tests.rs  scan_unit_tests.rs  wav_probe_tests.rs
musefs-core/tests/: backing_changed_fault.rs  bench_ingest.rs  bench_refresh.rs  binary_tag_tree.rs  checksums.rs  common_corpus_smoke.rs  concurrent_reads.rs  contract_emit.rs  db_corruption_fault.rs  external_contract.rs  facade.rs  fault_injection.rs  flac_binary_tags.rs  incremental_refresh.rs  interop_emit.rs  metrics.rs  perf_counters.rs  pipeline_backpressure.rs  probe_equivalence.rs  proptest_read_fidelity.rs  read_at.rs  reader.rs  reader_faults.rs  revalidate_freshness.rs  scan.rs  scan_counters.rs  smoke.rs  template.rs  tree.rs
musefs-core/tests/common/: corpus.rs  mod.rs  report.rs
musefs-db/: Cargo.toml
musefs-db/src/: art.rs  bulk.rs  convert.rs  error.rs  lib.rs  limits.rs  maintenance.rs  models.rs  schema.rs  structural.rs  tags.rs  tracks.rs
musefs-db/tests/: art.rs  change_detection.rs  format.rs  schema.rs  tags.rs  tracks.rs  triggers.rs
musefs-db/tests/common/: mod.rs
musefs-format/: Cargo.toml
musefs-format/src/: bytes.rs  convert.rs  error.rs  flac.rs  fuzz_check.rs  input.rs  layout.rs  lib.rs  mp3.rs  mp4.rs  probe.rs  size.rs  tagmap.rs  vorbiscomment.rs  wav.rs
musefs-format/src/mp4/: synth.rs  tests.rs
musefs-format/src/ogg/: art_source.rs  b64.rs  crc.rs  mod.rs  page.rs
musefs-format/tests/: flac_locate.rs  flac_pictures.rs  flac_roundtrip.rs  flac_synthesize_art.rs  flac_synthesize_tags.rs  layout.rs  locate.rs  mp3_locate.rs  mp3_pictures.rs  mp3_read_tags.rs  mp3_synthesize.rs  mp4_oracle.rs  proptest_flac.rs  proptest_mp3.rs  proptest_mp4.rs  proptest_ogg.rs  proptest_wav.rs  read_comments.rs  read_metadata.rs  roundtrip.rs  synthesize_art.rs  synthesize_tags.rs  wav_locate.rs  wav_read_tags.rs  wav_synthesize.rs
musefs-format/tests/common/: mod.rs
musefs-format/tests/fixtures/: sample.m4a
musefs-fuse/: Cargo.toml
musefs-fuse/src/: convert.rs  lib.rs  metrics_dir.rs
musefs-fuse/src/platform/: mod.rs  mount.rs  passthrough.rs  spotlight.rs
musefs-fuse/tests/: concurrency.rs  concurrent_reads.rs  fault_injection.rs  keep_cache.rs  metrics_e2e.rs  mount.rs  ogg_read_through.rs  passthrough.rs  playback_pcm.rs  read_consistency.rs
musefs-fuse/tests/common/: mod.rs
musefs-latencyfs/: Cargo.toml
musefs-latencyfs/src/: lib.rs
musefs-latencyfs/tests/: latency_effect.rs  passthrough.rs  sqlite_wal.rs
musefs/src/: main.rs
musefs/tests/: cli_process.rs  env_config.rs  sigterm_unmount.rs
(+432 files in other folders)
