[workspace]
resolver = "3"
members = ["musefs-db", "musefs-format", "musefs-core", "musefs-fuse", "musefs-cli", "musefs", "musefs-latencyfs"]
exclude = ["fuzz"]

[workspace.package]
version = "1.1.0"
edition = "2024"
# Best-effort MSRV. The bundled-SQLite dependency (libsqlite3-sys) tracks the
# newest stdlib — its build script uses `cfg_select!` — so the real floor
# follows recent stable. Verified: the workspace builds on 1.95 but not 1.94.
# Deliberately NOT CI-gated (it would churn on every such dep bump); a too-old
# toolchain still fails clearly via cargo's rust-version check. Bump when a
# dependency raises the floor.
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/Sohex/musefs"

[workspace.lints.rust]
# unsafe is denied by default everywhere; a genuinely-necessary unsafe must be
# opted in per-site with `#[expect(unsafe_code, reason = "...")]` so it stays
# greppable and review-visible. Never relax this workspace lint for a one-off.
unsafe_code = "deny"

# Curated clippy policy: pedantic on, minus the groups that are intentional or
# stylistic in this codebase. Inherited by each crate via `[lints] workspace = true`.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Integer-conversion convention (docs/superpowers/specs/2026-06-06-integer-cast-convention-design.md):
# widenings use `From`; u64->usize goes through a sanctioned usize_from helper
# (64-bit-only, compile-time guarded; `musefs_db::convert` for db/core/fuse/cli,
# a crate-local sibling in musefs-format, a local copy in standalone latencyfs);
# genuine narrowings use `try_from` (`?` on input-dependent values,
# `.expect`/`.unwrap` on structurally bounded ones and in tests); deliberate
# bit-truncation carries a per-site `#[expect]`.
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
cast_lossless = "warn"

# Doc conventions this project does not adopt.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

# Opinionated; not adopted.
must_use_candidate = "allow"
too_many_lines = "allow"        # function-length lint; not worth refactoring for
similar_names = "allow"         # flags legitimately-distinct nearby bindings
inline_always = "allow"         # a few deliberate hot-path annotations
trivially_copy_pass_by_ref = "allow" # `&[u8; 4]` FourCCs read better than `*b"..."` call sites
items_after_statements = "allow"     # helper structs/consts defined adjacent to their use

[profile.release]
# "debuginfo" (not "symbols"/true): keep the symbol table so field panic
# backtraces stay symbolicated, while still dropping the bulk of the size. This
# profile also governs local `cargo build --release` debugging builds.
strip = "debuginfo"
