[package]
name = "musefs-cli"
description = "musefs command-line interface: scan a music library and mount a re-tagged virtual view."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["fuse", "music", "metadata", "filesystem", "audio"]
categories = ["filesystem", "multimedia::audio", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
musefs-db = { path = "../musefs-db", version = "1.0.0" }
musefs-core = { path = "../musefs-core", version = "1.0.0" }
musefs-fuse = { path = "../musefs-fuse", version = "1.0.0" }
signal-hook = "0.4"
uzers = "0.12"

[dev-dependencies]
tempfile = "3"

[features]
jemalloc = ["musefs-fuse/jemalloc"]
metrics = ["musefs-fuse/metrics"]

[lints]
workspace = true
