[package]
name = "musefs-core"
description = "Orchestration for musefs: virtual tree, tag resolution, and scanning."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
metrics = []

[dependencies]
arc-swap = "1"
musefs-db = { path = "../musefs-db", version = "0.2.0" }
musefs-format = { path = "../musefs-format", version = "0.2.0" }
once_cell = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
metaflac = "0.2"
id3 = "1"
criterion = "0.8"
proptest = "1"
rusqlite = { version = "0.40", features = ["bundled", "blob"] }
musefs-format = { path = "../musefs-format", features = ["fuzzing"] }
ogg = "0.9"
crc = "3"

[[bench]]
name = "read_throughput"
harness = false

[lints]
workspace = true
