[package]
name = "musefs-core"
description = "Orchestration for musefs: virtual tree, tag resolution, and scanning."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
metrics = []

[dependencies]
arc-swap = "1"
crossbeam-channel = "0.5"
dashmap = "6"
im = "15"
log = "0.4"
musefs-db = { path = "../musefs-db", version = "1.1.0" }
musefs-format = { path = "../musefs-format", version = "1.1.0" }
once_cell = "1"
parking_lot = "0.12"
quick_cache = { version = "0.6.23", features = ["stats"] }
base16ct = "1.0"
sha2 = "0.11"
sharded-slab = "0.1"
thiserror = "2"

[dev-dependencies]
musefs-latencyfs = { path = "../musefs-latencyfs" }
libc = "0.2"
tempfile = "3"
metaflac = "0.2"
id3 = "1"
criterion = "0.8"
proptest = "1"
rusqlite = { version = "0.40", features = ["bundled", "blob"] }
musefs-format = { path = "../musefs-format", features = ["fuzzing"] }
ogg = "0.9"
crc = "3"
base64 = "0.22"

[[bench]]
name = "read_throughput"
harness = false

[[bench]]
name = "fingerprint_overhead"
harness = false

[lints]
workspace = true
