[package]
name = "musefs-db"
description = "SQLite store and schema for musefs (tracks, tags, content-addressed art)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# fallible_uint enables the checked FromSql/ToSql impls for u64/usize, which
# validate non-negative row columns at the boundary (the cast-convention spec).
rusqlite = { version = "0.40", features = ["bundled", "blob", "fallible_uint"] }
sha2 = "0.11"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"

[features]
# Test-only: gates `Default` impls (Db + model structs) so cargo-mutants'
# `Ok(Default::default())` mutants compile. Named after the activity that needs
# it, mirroring musefs-format's `fuzzing` feature. Not for production use.
mutants = []
# Test/fuzz-only: exposes `Db::with_raw_conn` so the out-of-workspace fuzz crate
# can plant hostile rows the validating public API cannot produce. Never enabled
# in normal builds. Mirrors the `mutants` feature pattern.
fuzzing = []

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
