[package]
name = "musefs-db"
description = "SQLite store and schema for musefs (tracks, tags, content-addressed art)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# HexDisplay is the RustCrypto-recommended way to hex-format a digest since
# sha2 0.11 swapped GenericArray (LowerHex) for hybrid_array::Array (no fmt).
base16ct = "1.0"
# fallible_uint enables the checked FromSql/ToSql impls for u64/usize, which
# validate non-negative row columns at the boundary (the cast-convention spec).
log = "0.4"
rusqlite = { version = "0.40", features = ["bundled", "blob", "fallible_uint"] }
sha2 = "0.11"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"

[features]
# Test-only: gates `Default` impls (Db + model structs) so cargo-mutants'
# `Ok(Default::default())` mutants compile. Named after the activity that needs
# it, mirroring musefs-format's `fuzzing` feature. Not for production use.
mutants = []
# Test/fuzz-only: exposes `Db::with_raw_conn` so the out-of-workspace fuzz crate
# can plant hostile rows the validating public API cannot produce. Never enabled
# in normal builds. Mirrors the `mutants` feature pattern.
fuzzing = []

[dev-dependencies]
# Used to plant a future `user_version` on a file-backed store, exercising the
# "store is newer than this binary" guard the public API cannot otherwise reach.
rusqlite = { version = "0.40", features = ["bundled"] }
tempfile = "3"

[lints]
workspace = true
