[package]
name = "musefs-format"
description = "On-the-fly audio metadata synthesis and byte-layout for musefs (FLAC/MP3/MP4/Ogg/WAV)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "1"
id3 = "1"
base64 = "0.22"

[dev-dependencies]
metaflac = "0.2"
mp4 = "0.14"
crc = "3"
hound = "3"

[lints]
workspace = true
