[package]
name = "musefs-fuse"
description = "FUSE adapter for musefs (fuser)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
metrics = ["musefs-core/metrics"]

[dependencies]
fuser = { version = "0.14", features = ["abi-7-31"] }
libc = "0.2"
musefs-core = { path = "../musefs-core" }
threadpool = "1"

[dev-dependencies]
tempfile = "3"
metaflac = "0.2"
musefs-db = { path = "../musefs-db" }
musefs-format = { path = "../musefs-format" }
ogg = "0.9"

[lints]
workspace = true
