[package]
name = "musefs-fuse"
description = "FUSE adapter for musefs (fuser)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
metrics = ["musefs-core/metrics"]

[dependencies]
fuser = { version = "0.17", features = ["abi-7-31"] }
libc = "0.2"
log = "0.4"
musefs-core = { path = "../musefs-core" }
threadpool = "1"

[dev-dependencies]
tempfile = "3"
metaflac = "0.2"
musefs-db = { path = "../musefs-db" }
musefs-format = { path = "../musefs-format" }
ogg = "0.9"
sha2 = "0.11"

[lints]
workspace = true
