[package]
name = "musefs-fuse"
description = "FUSE adapter for musefs (fuser)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
metrics = ["musefs-core/metrics"]

[dependencies]
# Pure-rust fusermount3 mount path; never enable `libfuse` (static musl can't link it).
fuser = { version = "0.17", default-features = false }
libc = "0.2"
log = "0.4"
rustix = { version = "1", features = ["process"] }
musefs-core = { path = "../musefs-core", version = "1.0.0" }
threadpool = "1"

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.17", features = ["macos-no-mount"] }

[dev-dependencies]
tempfile = "3"
rustix = { version = "1", features = ["fs"] }
metaflac = "0.2"
musefs-db = { path = "../musefs-db" }
musefs-format = { path = "../musefs-format", features = ["fuzzing"] }
ogg = "0.9"
sha2 = "0.11"
memmap2 = "0.9"
base64 = "0.22"

[lints]
workspace = true
