[package]
name = "musefs-latencyfs"
description = "Bench-only passthrough FUSE with per-op latency injection for musefs benchmarks."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
fuser = "0.17"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.40", features = ["bundled"] }

[lints]
workspace = true
