[package]
name = "musefs-latencyfs"
description = "Bench-only passthrough FUSE with per-op latency injection for musefs benchmarks."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
fuser = "0.17"
libc = "0.2"
rustix = { version = "1", features = ["process", "fs"] }
tempfile = "3"

[dev-dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }

[lints]
workspace = true
