[package]
name = "musefs"
description = "Read-only FUSE filesystem presenting a re-tagged virtual view of a music library."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["fuse", "music", "metadata", "filesystem", "audio"]
categories = ["filesystem", "multimedia::audio", "command-line-utilities"]

[[bin]]
name = "musefs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
musefs-cli = { path = "../musefs-cli", version = "0.2.0" }

[dev-dependencies]
tempfile = "3"
rustix = { version = "1", features = ["process"] }

[lints]
workspace = true
