[package]
name = "musefs"
description = "Read-only FUSE filesystem presenting a re-tagged virtual view of a music library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["fuse", "music", "metadata", "filesystem", "audio"]
categories = ["filesystem", "multimedia::audio", "command-line-utilities"]

[[bin]]
name = "musefs"
path = "src/main.rs"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl", "tikv-jemalloc-ctl/stats", "dep:log", "dep:musefs-fuse"]

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
musefs-cli = { path = "../musefs-cli", version = "1.0.0" }
# Direct dep only under `jemalloc`: the binary installs the allocator-stats probe
# (`musefs_fuse::set_alloc_probe`) since it owns the jemalloc global allocator.
musefs-fuse = { path = "../musefs-fuse", version = "1.0.0", optional = true }
tikv-jemallocator = { version = "0.7", optional = true }
tikv-jemalloc-ctl = { version = "0.7", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
rustix = { version = "1", features = ["process"] }

[lints]
workspace = true
