[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "beets-musefs"
version = "1.2.0"
description = "Sync beets metadata into the musefs SQLite store"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Conor Futro" }]
dependencies = ["python-musefs>=1.2.0", "beets>=1.6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/Sohex/musefs"
Repository = "https://github.com/Sohex/musefs"
Issues = "https://github.com/Sohex/musefs/issues"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
packages = ["beetsplug"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "musefs_bin: tests that shell out to the real `musefs` Rust binary (opt-in)",
    "e2e: full beets -> musefs -> FUSE-mount end-to-end (opt-in; needs ffmpeg, the musefs binary, and /dev/fuse)",
]
# By default, skip the opt-in tiers; run them explicitly with `-m musefs_bin` / `-m e2e`.
addopts = "-m 'not musefs_bin and not e2e'"
