[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "musefs-picard"
version = "1.1.0"
description = "Sync MusicBrainz Picard metadata into the musefs SQLite store"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Conor Futro" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/Sohex/musefs"
Repository = "https://github.com/Sohex/musefs"
Issues = "https://github.com/Sohex/musefs/issues"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-qt>=4"]

[tool.setuptools]
packages = ["musefs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# So `import musefs._core` resolves to contrib/picard/musefs without an install.
pythonpath = ["."]
markers = [
    "musefs_bin: tests that shell out to the real `musefs` Rust binary (opt-in)",
]
# Skip the opt-in binary gate by default; run it explicitly with `-m musefs_bin`.
addopts = "-m 'not musefs_bin'"
